# agent-diagnostics

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  kpk4lrec2qgdpqdqrjaaeubllnk1hcgd  manifest  pipeline.toml  prd_agent_diagnostics_testing_quality.md  prd_agent_observatory.md  premortem_agent_diagnostics_testing_quality.md  premortem_agent_observatory.md  pyproject.toml  qvgedsifvj38pdsigckh5ecj2irjkdhb  smoke_test.py  thjmolbmjbppdribk4gp11i6qvbsfprn.darc
.beads/: config.yaml  metadata.json  routes.jsonl
.beads/formulas/: mol-do-work.formula.toml  mol-polecat-base.formula.toml  mol-polecat-commit.formula.toml  mol-scoped-work.formula.toml
.beads/hooks/: on_close  on_create  on_update
.claude/: prd-build.log.md  prd-build.state.json
.claude/commands/: calibrate.md  db.md  explore.md  export.md  ingest.md  label.md  manifest.md  pipeline.md  report.md  train.md  validate.md
.claude/prd-build-artifacts/: dag.json  plan-annotation-store.md  plan-duckdb-query.md  plan-parquet-export.md  plan-target-queries.md  plan-unit-annotation-cache.md  plan-unit-annotation-result-type.md  plan-unit-annotator.md  plan-unit-blend.md  plan-unit-calibrate.md  plan-unit-classifier-blend-ensemble.md  plan-unit-classifier-tests.md  plan-unit-classifier.md  plan-unit-cli-tests.md  plan-unit-cli.md  plan-unit-cooccurrence-dimensions.md  plan-unit-ensemble.md  plan-unit-fake-backend-fixtures.md  plan-unit-ingest-command.md  plan-unit-jsonl-format.md  plan-unit-llm-annotator.md  plan-unit-llm-refactor.md  plan-unit-llm-tests.md  plan-unit-manifest-integration.md  plan-unit-new-categories.md  plan-unit-nullable-reward.md  plan-unit-prompt-quarantine.md  plan-unit-redaction-constants.md  plan-unit-report-tests.md  plan-unit-report.md  plan-unit-signals.md  plan-unit-taxonomy-v3.md  plan-unit-trajectory-denominators.md  plan-unit-trial-filter.md  plan-unit-types.md  plan-writer-refactor.md  research-unit-annotation-cache.md  research-unit-annotation-result-type.md  research-unit-annotator.md  research-unit-blend.md  (+56 more)
.gc/tmp/: prompt-claude-1-gc-1061-2608585497.txt  prompt-claude-1-gc-246-368023199.txt  prompt-claude-1-gc-488-3441805904.txt  prompt-claude-1-gc-766-507838077.txt  prompt-claude-2-gc-1371-668337951.txt
.github/workflows/: ci.yml  likec4-pages.yml
architecture/: README.md  deployment.c4  model.c4  spec.c4  views.c4
data/export/: MANIFEST.json  annotations.parquet  signals.parquet
docs/design/: classifier-slash-commands.md  prd_agent_trace_dataset_pipeline.md  prd_behavioral_taxonomy_annotation_improvements.md  prd_shareable_dataset_backend.md  premortem_agent_trace_dataset_pipeline.md  premortem_behavioral_taxonomy_annotation_improvements.md  premortem_shareable_dataset_backend.md
docs/queries/: annotation_cooccurrence.sql  benchmark_model_matrix.sql  eval_subset_export.sql  per_model_outcomes.sql  tool_sequence_patterns.sql
docs/schemas/: annotations.md  manifests.md  signals.md
scripts/: build_golden_corpus.py  curate_golden_corpus.py  gen_schema_docs.py
src/agent_diagnostics/: __init__.py  __main__.py  agreement.py  annotation_cache.py  annotation_schema.json  annotation_store.py  annotator.py  blend_labels.py  calibrate.py  classifier.py  cli.py  constants.py  ensemble.py  export.py  export_manifest_schema.json  extract_cache.py  llm_annotator.py  model_identity.py  models.yaml  pipeline.py  query.py  report.py  signals.py  taxonomy.py  taxonomy_v3.yaml  tool_registry.py  types.py
src/agent_diagnostics/cli/: __init__.py  _helpers.py  annotate.py  classify.py  data.py  ingest.py  main.py  reporting.py
src/agent_diagnostics/exemplars/: 03_wrong_tool_choice.json  08_multi_repo_scope_failure.json  09_local_remote_mismatch.json  11_over_exploration.json  (+10 more)
src/agent_observatory/: __init__.py  __main__.py  annotator.py  blend_labels.py  calibrate.py  classifier.py  cli.py  ensemble.py  llm_annotator.py  report.py  signals.py  taxonomy.py  taxonomy_v1.yaml  taxonomy_v2.yaml  types.py
tests/: conftest.py  fake_llm_backend.py  test_agreement.py  test_annotation_cache.py  test_annotation_result.py  test_annotation_status_propagation.py  test_annotation_store.py  test_annotator.py  test_backend_model_parity.py  test_backend_parity.py  test_blend_labels.py  test_calibrate.py  test_calibrate_metrics.py  test_classifier.py  test_cli.py  test_cmd_annotate_carry.py  test_e2e_golden.py  test_ensemble.py  test_export.py  test_extract_cache.py  test_llm_annotator.py  test_llm_annotator_taxonomy_compat.py  test_model_identity.py  test_pipeline.py  test_prompt_injection.py  test_query.py  test_regression_guard.py  test_report.py  test_report_comparative.py  test_schema_docs.py  test_signal_leakage.py  test_signals.py  test_target_queries.py  test_taxonomy.py  test_taxonomy_schema.py  test_tool_registry.py  test_trial_id.py  test_types.py  test_version.py  test_writer_refactor.py
tests/contracts/: taxonomy_v3_contract.py
tests/fixtures/: claude_envelope_code_fences.json  claude_envelope_empty_result.json  claude_envelope_is_error.json  claude_envelope_raw_fallback.json  claude_envelope_raw_list.json  claude_envelope_structured_output.json
tests/integration/: test_determinism.py  test_golden_corpus.py
(+267 files in other folders)
