[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-diagnostics"
version = "0.5.0"
description = "Agent Reliability Observatory — a behavioral taxonomy and annotation framework for analyzing why coding agents succeed or fail."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "CodeScaleBench Team" }]
keywords = ["agents", "benchmarks", "reliability", "taxonomy", "annotation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pyyaml>=6.0,<7"]

[project.optional-dependencies]
llm = ["anthropic>=0.30"]
validation = ["jsonschema>=4.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
observatory = "agent_diagnostics.cli:main"

[project.urls]
Repository = "https://github.com/sourcegraph/agent-observatory"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_diagnostics"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
