[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-diagnostics"
version = "0.8.1"
description = "Agent Reliability Observatory — a behavioral taxonomy and annotation framework for analyzing why coding agents succeed or fail."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "CodeScaleBench Team" }]
keywords = ["agents", "benchmarks", "reliability", "taxonomy", "annotation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0,<7",
    "anthropic>=0.30,<1.0",
    "jsonschema>=4.0",
    "duckdb>=1.0,<2.0",
    "pyarrow>=15.0,<18.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
agent-diagnostics = "agent_diagnostics.cli:main"
observatory = "agent_diagnostics.cli:main"

[project.urls]
Repository = "https://github.com/sjarmak/agent-diagnostics"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_diagnostics"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Docstring contains a TOML pipeline example with long command strings that
# must remain verbatim so users can copy-paste them.
"src/agent_diagnostics/pipeline.py" = ["E501"]
# Fixture evidence sentences shipped as golden test data for the fake LLM
# backend; wrapping them would churn every fixture with no readability gain.
"tests/fake_llm_backend.py" = ["E501"]

[tool.coverage.run]
source = ["agent_diagnostics"]

[tool.coverage.report]
fail_under = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
